syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/phantoms158/simple_bank/pb";

message CreateUserRequest {
    string username = 1;
    string full_name = 2;
    string email = 3;
}

message CreateUserResponse {
    User user = 1;
}